<resources>
    <string name="app_name">AstroWeather</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="geo_width">Szerokość geograficzna</string>
    <string name="geo_height">Wysokość geograficzna</string>
    <string name="refresh_time">Częstotliwość odświeżania</string>
    <string name="accept">Zatwierdź</string>
    <string name="invalid_position">Nieprawidłowe współrzędne geograficzne</string>
    <string name="invalid_refresh">Musisz wybrać czas odświeżania</string>
    <string name="invalid_latitude">Niepoprawna szerokość geograficzna</string>
    <string name="invalid_longitude">Niepoprawna szerokość geograficzna</string>
    <string name="gear_icon_description">Gear icon</string>
    <string name="time_label">Czas</string>
    <string name="longitude_label">Szerokość geograficzna</string>
    <string name="latitude_label">Wysokość geograficzna</string>
    <string name="empty_value">---</string>
    <string name="moonrise_label">Wschód</string>
    <string name="moonset_label">Zachód</string>
    <string name="internular_label">Najbliższy nów</string>
    <string name="fullmoon_label">Najbliższa pełnia</string>
    <string name="sunrise_label">Wschód</string>
    <string name="sunset_label">Zachód</string>
    <string name="sunrise_azimuth_label">Azymut wschodu</string>
    <string name="sunset_azimuth_label">Azymut zachodu</string>
    <string name="dawn_label">Swit cywilny</string>
    <string name="dusk_label">Zmierzch cywilny</string>
    <string name="placeholder">------</string>
    <string name="city_label">Miasto</string>
    <string name="region_label">Region</string>
    <string name="enter_location_hint">Podaj nową lokalizację</string>
    <string name="temperature_label">Temperatura</string>
    <string name="preassure_label">Ciśnienie</string>
    <string name="description_label">Opis</string>
    <string name="condition_label">Warunki</string>
    <string name="windchill_label">Chłód wiatru</string>
    <string name="wind_direction_label">Kierunek wiatru</string>
    <string name="wind_speed_label">Prędkość wiatru</string>
    <string name="humidity_label">Wilgotność</string>
    <string name="visibility_label">Widoczność</string>
    <string name="forecast_temperature">Temperatura</string>
    <string name="forecast_description_label">Opis</string>
    <string name="forecast_condition_label">Warunki</string>
    <string name="forecast_date_label">Data</string>
</resources>